kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorers-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  selector:
    matchLabels:
      app: explorers-frontend
  template:
    metadata:
      labels:
        app: explorers-frontend
    spec:
      imagePullSecrets:
      - name: explorers-registry
      containers:
      - name: explorers-frontend
        image: CONTAINER_IMAGE
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - containerPort: 3000
