kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: explorers-frontend
spec:
  type: ClusterIP
  selector:
    app: explorers-frontend
  ports:
  - port: 80
    targetPort: 3000
