kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorers
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: explorers
spec:
  tls:
  - hosts:
    - explorers.joaorodriguesjr.com
    secretName: explorers-tls
  rules:
  - host: explorers.joaorodriguesjr.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: explorers-frontend
            port:
              number: 80
